[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/game/ui/tasks/UITask.gd" type="Script" id=1]

[node name="Task" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 2
custom_constants/margin_left = 10
custom_constants/margin_bottom = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 2.0
margin_right = 1014.0
margin_bottom = 598.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 14.0

[node name="TaskName" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "super"

[node name="CrewCount" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "0/0"
align = 2

[node name="Progress" type="ProgressBar" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1004.0
margin_bottom = 32.0
rounded = true
[connection signal="gui_input" from="." to="." method="_on_Task_gui_input"]
